@@ -1,5 +1,10 @@
 ﻿$Revision$
 	$Author$ $Date$
+	первый этап переделки. класс InternalString.
+	переделана часть парсера.
+
+#Revision: 1738
+	#Author: ctapmex Date: 2011-07-08 23:32:22 +0600 (Пт, 08 июл 2011)
 	1. программа для замера скорости работы
 	приложены базы , чтобы тесты были одинаковы. результаты замеров в result.xls
 
